Fix navigation controller header collapsing

--- a/app/navigation-controller.less
+++ b/app/navigation-controller.less
@@ -46,6 +46,7 @@
 		position: absolute;
 		background: rgba(255, 255, 255, 0.9);
 		width: 100%;
+		height: 50px;
 
 		.back-button {
 			text-decoration: none;
